# ai-agent-crashcourse

./: .bandit  .gitignore  .pre-commit-config.yaml  BRANCH_PROTECTION.md  README.md  validate.sh
.github/workflows/: branch-protection.yml  ci.yml  dependency-update.yml
aihero/: .gitignore
aihero/app/: README.md  app.py  cli.py  pyproject.toml
aihero/app/core/: agent.py  agent_tools.py  chunks.py  log.py  search.py
aihero/app/prompts/: system_prompt_multitry.yml  templates.py
aihero/app/utils/: log.py  utils.py
aihero/course/: .gitkeep  Course_notebook.ipynb  day1.ipynb  pyproject.toml  read.py
aihero/project/: .gitignore  .gitkeep  README.md  agent.py  agent_repo.py  agent_tools.py  chunk_repo.py  chunks.py  eval.py  pyproject.toml  read.py  read_algo_python.py  read_repo.py  search.py  search_repo.py  utils.py
aihero/project/notebooks/: Agent_eval.ipynb
aihero/project/prompts/: eval_prompt.yml  quest_gen_prompt.yml  system_prompt.yml  system_prompt_multitry.yml
aihero/project/schemas/: evaluation.py
