[project]
name = "course"
version = "0.3.0"
description = "AI agents course tutorials and examples"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "google-generativeai>=0.8.5",
    "minsearch>=0.0.5",
    "openai>=1.109.1",
    "pandas>=2.3.2",
    "pydantic-ai>=1.0.10",
    "python-frontmatter>=1.1.0",
    "requests>=2.32.5",
    "sentence-transformers>=5.1.1",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]
